controlador y elimincacion de metodos no necesarios #7
